deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gobivc
  namespace: gobivc
  labels:
    app: gobivc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: gobivc
